syntax = "proto3";

// define package name of the proto file
package settings;

// Set up the microservice and define all endpoints with argument and return types
service micro{
  rpc Create (Setting) returns (Empty) {}
  rpc Update (Setting) returns (Empty) {}
  rpc Delete (SettingId) returns (Empty) {}
  rpc Get (SettingId) returns (Setting) {}
  rpc List (SettingRequest) returns (SettingList) {}
}

// define the message formats used by the in the Interface definitions
message Empty {}

message Setting {
  int32 id = 1;
  string appName = 2;
  string userId = 3;
  Data data = 4;
  string created_at = 5;
  string updated_at = 6;
}

message SettingId {
  int32 id = 1;
}

message SettingRequest {
  string userId = 1;
  string appName = 2;
}

message SettingList {
  repeated Setting settings = 1;
}

message Widget {
  string description = 1;
  bool value =2;
}

message Field {
  string name = 1;
  string key = 2;
  int32 order = 3;
}

message List {
  repeated Field values = 1;
}

message Data {
  map<string, Widget> widget_settings = 1;
  map<string, List> fields = 2;
}